Make install with sudo

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,16 +22,16 @@ install:
     - cd build/libindi
     - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . ../../libindi/
     - make
-    - make install
+    - sudo make install
     - cd ..
     - mkdir 3rdparty
     - cd 3rdparty
     - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . ../../3rdparty/
     - make 
-    - make install
+    - sudo make install
     - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . ../../3rdparty/
     - make 
-    - make install
+    - sudo make install
     
     
 script:
