Build and install libraries first

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,9 +26,7 @@ install:
     - cd ..
     - mkdir 3rdparty
     - cd 3rdparty
-    - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . ../../3rdparty/
-    - make 
-    - sudo make install
+    - bash ../../3rdparty/make_libraries
     - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ . ../../3rdparty/
     - make 
     - sudo make install
