Add dcraw to deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
     - sudo apt-get -q -y install libusb-1.0-0-dev libcfitsio3-dev libnova-dev 
     - sudo apt-get -q -y install libgphoto2-dev libgps-dev libjpeg-dev 
     - sudo apt-get -q -y install libopenal-dev libgsl0-dev libboost-dev 
-    - sudo apt-get -q -y install libboost-regex-dev libftdi-dev
+    - sudo apt-get -q -y install libboost-regex-dev libftdi-dev dcraw
 
 install:
     - mkdir -p build/libindi
