Add debian build of libindi to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
     - sudo apt-get -q -y install libusb-1.0-0-dev libcfitsio3-dev libnova-dev 
     - sudo apt-get -q -y install libgphoto2-dev libgps-dev libjpeg-dev 
     - sudo apt-get -q -y install libopenal-dev libgsl0-dev libboost-dev 
-    - sudo apt-get -q -y install libboost-regex-dev libftdi-dev dcraw
+    - sudo apt-get -q -y install libboost-regex-dev libftdi-dev dcraw fakeroot
 
 install:
     - mkdir -p build/libindi
@@ -27,7 +27,13 @@ install:
     - cmake -DCMAKE_INSTALL_PREFIX=/usr/local/ -DWITH_NSE:OPTION=ON . ../../3rdparty/
     - make 
     - sudo make install
-    
+    - cd ..
+    - mkdir deb
+    - cd deb
+    - cp -r ../../libindi .
+    - cp -r ../../cmake_modules libindi/
+    - cp -r ../../debian/libindi debian
+    - fakeroot debian/rules binary
     
 script:
     - echo Test
