Add cdbs to dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ os: linux
 before_install:
     - echo Install dependencies
     - sudo apt-get -qq update
-    - sudo apt-get -q -y install libusb-1.0-0-dev libcfitsio3-dev libnova-dev 
-    - sudo apt-get -q -y install libgphoto2-dev libgps-dev libjpeg-dev 
-    - sudo apt-get -q -y install libopenal-dev libgsl0-dev libboost-dev 
+    - sudo apt-get -q -y install libusb-1.0-0-dev libcfitsio3-dev libnova-dev
+    - sudo apt-get -q -y install libgphoto2-dev libgps-dev libjpeg-dev cdbs
+    - sudo apt-get -q -y install libopenal-dev libgsl0-dev libboost-dev
     - sudo apt-get -q -y install libboost-regex-dev libftdi-dev dcraw fakeroot
 
 install:
