--- a/debian/libindi/control
+++ b/debian/libindi/control
@@ -3,6 +3,7 @@ Section: misc
 Priority: optional
 Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
 Build-Depends: debhelper (>= 8.1.3~),
+ cdbs,
  cmake (>= 2.4.7),
  libcfitsio3-dev,
  libnova-dev,
@@ -13,8 +14,7 @@ Build-Depends: debhelper (>= 8.1.3~),
  libcurl4-gnutls-dev
 Standards-Version: 3.9.5
 Homepage: http://www.indilib.org/
-Vcs-Git: git://anonscm.debian.org/pkg-kde/krap/libindi.git
-Vcs-Browser: http://anonscm.debian.org/gitweb/?p=pkg-kde/krap/libindi.git
+Vcs-Git: git://github.com/indilib/indi.git
 
 Package: libindi1
 Section: libs
