Add indi-gpsd and indi-nexstarevo

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 2.6)
 
 PROJECT(libindi-3rdparty CXX C)
-
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../cmake_modules/")
+include(GNUInstallDirs)
+
 set(LIBRARIES_FOUND TRUE)
 
 option(WITH_EQMOD "Install EQMod Driver" On)
