--- a/3rdparty/indi-nexstarevo/CMakeLists.txt
+++ b/3rdparty/indi-nexstarevo/CMakeLists.txt
@@ -2,6 +2,8 @@
 PROJECT(indi-nexstarevo C CXX)
 cmake_minimum_required(VERSION 2.4.7)
 
+include(GNUInstallDirs)
+
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
