--- a/3rdparty/indi-gphoto/CMakeLists.txt
+++ b/3rdparty/indi-gphoto/CMakeLists.txt
@@ -7,6 +7,7 @@ set(INDI_GPHOTO_VERSION_MINOR 5)
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 include(GNUInstallDirs)
+set(INDI_DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/indi")
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall" )
 SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -DDEBUG_FITS" )
