Change sbig ==> libsbig

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -66,7 +66,7 @@ find_package(SBIG)
 if (SBIG_FOUND)
 add_subdirectory(indi-sbig)
 else (SBIG_FOUND)
-add_subdirectory(sbig)
+add_subdirectory(libsbig)
 SET(LIBRARIES_FOUND FALSE)
 endif (SBIG_FOUND)
 endif (WITH_SBIG)
