--- a/3rdparty/generic-ccd/CMakeLists.txt
+++ b/3rdparty/generic-ccd/CMakeLists.txt
@@ -5,6 +5,11 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
 
+include(GNUInstallDirs)
+
+set (GENERIC_VERSION_MAJOR 1)
+set (GENERIC_VERSION_MINOR 0)
+
 find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
 find_package(ZLIB REQUIRED)
