--- a/3rdparty/indi-aagcloudwatcher/CMakeLists.txt
+++ b/3rdparty/indi-aagcloudwatcher/CMakeLists.txt
@@ -7,8 +7,8 @@ LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 include(GNUInstallDirs)
 
-set (VERSION_MAJOR 1)
-set (VERSION_MINOR 3)
+set (AAG_VERSION_MAJOR 1)
+set (AAG_VERSION_MINOR 3)
 
 find_package(INDI REQUIRED)
 find_package(Threads REQUIRED)
@@ -16,6 +16,9 @@ find_package(Threads REQUIRED)
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_aagcloudwatcher.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_aagcloudwatcher.xml)
 
 set(indiaag_SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/indi_aagcloudwatcher.cpp
@@ -34,5 +37,5 @@ add_executable(aagcloudwatcher_test ${test_SRCS})
 
 install(TARGETS indi_aagcloudwatcher RUNTIME DESTINATION bin)
 install(TARGETS aagcloudwatcher_test RUNTIME DESTINATION bin)
-install(FILES indi_aagcloudwatcher.xml DESTINATION ${INDI_DATA_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_aagcloudwatcher.xml DESTINATION ${INDI_DATA_DIR})
 install(FILES indi_aagcloudwatcher_sk.xml DESTINATION ${INDI_DATA_DIR})
