--- a/debian/indi-asi/control
+++ b/debian/indi-asi/control
@@ -1,12 +1,11 @@
-Source: indi-asicam
+Source: indi-asi
 Section: science
 Priority: extra
-Maintainer: Ubuntu MOTU Developers <ubuntu-motu@lists.ubuntu.com>
-XSBC-Original-Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
+Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
 Build-Depends: debhelper (>= 5), cdbs, cmake, libusb-1.0-0-dev, libcfitsio3-dev, libindi-dev, zlib1g-dev, libnova-dev
-Standards-Version: 3.8.0
+Standards-Version: 3.9.1
 
-Package: indi-asicam
+Package: indi-asi
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}, libindi1
 Description: INDI Driver for ZWO Optics ASI cameras
@@ -14,7 +13,7 @@ Description: INDI Driver for ZWO Optics ASI cameras
  .
  This driver is compatible with any INDI client such as KStars or Xephem.
 
-Package: indi-asicam-dbg
+Package: indi-asi-dbg
 Priority: extra
 Section: debug
 Architecture: any
