--- a/3rdparty/indi-duino/CMakeLists.txt
+++ b/3rdparty/indi-duino/CMakeLists.txt
@@ -5,21 +5,20 @@ set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 set(FIRMATA_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libfirmata/src/")
-set (VERSION_MAJOR 0)
-set (VERSION_MINOR 2)
+include(GNUInstallDirs)
+
+set (DUINO_VERSION_MAJOR 0)
+set (DUINO_VERSION_MINOR 2)
  
 find_package(INDI REQUIRED)
 
-configure_file (
-  "${CMAKE_CURRENT_SOURCE_DIR}/duconfig.h.in"
-  "${CMAKE_CURRENT_SOURCE_DIR}/duconfig.h"
-  )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_duino.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_duino.xml )
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${INDI_INCLUDE_DIR})
 include_directories(${FIRMATA_INCLUDE_DIR})
-
 
 ################# libfirmata ############################
 set (firmata_VERSION_MAJOR 1)
@@ -51,7 +50,7 @@ add_executable(indi_duino ${indiduino_SRCS})
 target_link_libraries(indi_duino ${INDI_DRIVER_LIBRARIES} firmata)
 
 install(TARGETS indi_duino RUNTIME DESTINATION bin)
-
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_duino.xml DESTINATION ${INDI_DATA_DIR})
 ################### DEVICES XML  #####################
 add_subdirectory(devices)
 
