Update FLI build

--- a/3rdparty/indi-fli/CMakeLists.txt
+++ b/3rdparty/indi-fli/CMakeLists.txt
@@ -3,7 +3,7 @@ PROJECT(indi_fli C CXX)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
-set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
+include(GNUInstallDirs)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 
@@ -12,11 +12,11 @@ find_package(INDI REQUIRED)
 find_package(FLI REQUIRED)
 find_package(ZLIB REQUIRED)
 
-
 set (FLI_CCD_VERSION_MAJOR 1)
 set (FLI_CCD_VERSION_MINOR 1)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_fli.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_fli.xml )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR})
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
@@ -56,4 +56,4 @@ target_link_libraries(indi_fli_ccd ${INDI_DRIVER_LIBRARIES} ${FLI_LIBRARIES} ${C
 
 install(TARGETS indi_fli_ccd RUNTIME DESTINATION bin)
 
-install(FILES indi_fli.xml DESTINATION ${INDI_DATA_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_fli.xml DESTINATION ${INDI_DATA_DIR})
