Add GNUinstall dir

--- a/3rdparty/indi-maxdomeii/CMakeLists.txt
+++ b/3rdparty/indi-maxdomeii/CMakeLists.txt
@@ -3,6 +3,7 @@ PROJECT(indi_maxdomeii C CXX)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
+include(GNUInstallDirs)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 
