Nexstar evo template updates

--- a/3rdparty/indi-nexstarevo/CMakeLists.txt
+++ b/3rdparty/indi-nexstarevo/CMakeLists.txt
@@ -6,8 +6,7 @@ include(GNUInstallDirs)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
-set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
-set(DATA_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/indi/")
+
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 
 find_package(INDI REQUIRED)
@@ -17,7 +16,8 @@ find_package(ZLIB REQUIRED)
 set(NSEVO_VERSION_MAJOR 0)
 set(NSEVO_VERSION_MINOR 2)
 
-set(INDI_DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/indi")
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_nexstarevo.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_nexstarevo.xml )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR})
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
@@ -29,4 +29,4 @@ add_executable(indi_nexstarevo_telescope nexstarevo.cpp NexStarAUXScope.cpp)
 target_link_libraries(indi_nexstarevo_telescope indiAlignmentDriver ${INDI_LIBRARIES} ${INDI_DRIVER_LIBRARIES} ${NOVA_LIBRARIES})
 install(TARGETS indi_nexstarevo_telescope RUNTIME DESTINATION bin )
 
-install( FILES  indi_nexstarevo.xml DESTINATION ${INDI_DATA_DIR})
+install( FILES  ${CMAKE_CURRENT_BINARY_DIR}/indi_nexstarevo.xml DESTINATION ${INDI_DATA_DIR})
