qhy and libqhy updates

--- a/3rdparty/indi-qhy/CMakeLists.txt
+++ b/3rdparty/indi-qhy/CMakeLists.txt
@@ -3,8 +3,7 @@ PROJECT(indi_qhy CXX C)
 
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
-set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
-set(INDI_DATA_DIR "${CMAKE_INSTALL_PREFIX}/share/indi")
+include(GNUInstallDirs)
 
 find_package(CFITSIO REQUIRED)
 find_package(INDI REQUIRED)
@@ -15,7 +14,9 @@ find_package(Threads REQUIRED)
 
 set(INDI_QHY_VERSION_MAJOR 1)
 set(INDI_QHY_VERSION_MINOR 6)
+
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_qhy.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_qhy.xml )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR})
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
@@ -46,5 +47,5 @@ endif (CMAKE_HOST_SYSTEM_PROCESSOR MATCHES "arm*")
 
 install(TARGETS indi_qhy_ccd RUNTIME DESTINATION bin )
 
-install(FILES indi_qhy.xml DESTINATION ${INDI_DATA_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_qhy.xml DESTINATION ${INDI_DATA_DIR})
 
