QHY template and build updates

--- a/3rdparty/indi-qsi/CMakeLists.txt
+++ b/3rdparty/indi-qsi/CMakeLists.txt
@@ -4,7 +4,7 @@ PROJECT(indi_qsi CXX C)
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
-set(BIN_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/bin")
+include(GNUInstallDirs)
 set(RULES_INSTALL_DIR "/lib/udev/rules.d/")
 
 find_package(CFITSIO REQUIRED)
@@ -12,7 +12,11 @@ find_package(INDI REQUIRED)
 find_package(QSI REQUIRED)
 find_package(ZLIB REQUIRED)
 
+set (QSI_VERSION_MAJOR 0)
+set (QSI_VERSION_MINOR 5)
+
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_qsi.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_qsi.xml )
 
 include_directories( ${CMAKE_CURRENT_BINARY_DIR})
 include_directories( ${CMAKE_CURRENT_SOURCE_DIR})
@@ -31,6 +35,6 @@ target_link_libraries(indi_qsi_ccd ${INDI_DRIVER_LIBRARIES} ${CFITSIO_LIBRARIES}
 
 install(TARGETS indi_qsi_ccd RUNTIME DESTINATION bin )
 
-install(FILES indi_qsi.xml DESTINATION ${INDI_DATA_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_qsi.xml DESTINATION ${INDI_DATA_DIR})
 install(FILES 99-qsi.rules DESTINATION ${RULES_INSTALL_DIR})
 
