--- a/debian/libapogee/rules
+++ b/debian/libapogee/rules
@@ -1,8 +1,7 @@
 #!/usr/bin/make -f
 
-DEB_DH_INSTALL_SOURCEDIR = debian/tmp
-
-include /usr/share/cdbs/1/class/cmake.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
+include /usr/share/cdbs/1/class/cmake.mk
 
+DEB_SRCDIR=libapogee
 DEB_DH_SHLIBDEPS_ARGS=-u--ignore-missing-info
