--- a/3rdparty/indi-tess/CMakeLists.txt
+++ b/3rdparty/indi-tess/CMakeLists.txt
@@ -1,20 +1,20 @@
 cmake_minimum_required(VERSION 2.4.7)
 PROJECT(indi_tess CXX C)
 Include (CheckCXXSourceCompiles)
+include(GNUInstallDirs)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
 LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
-set (VERSION_MAJOR 0)
-set (VERSION_MINOR 1)
+
+set (TESS_VERSION_MAJOR 0)
+set (TESS_VERSION_MINOR 1)
  
 find_package(INDI REQUIRED)
 find_package(Nova REQUIRED)
 
-configure_file (
-  "${CMAKE_CURRENT_SOURCE_DIR}/duconfig.h.in"
-  "${CMAKE_CURRENT_SOURCE_DIR}/duconfig.h"
-  )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config.h )
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/indi_tess.xml.cmake ${CMAKE_CURRENT_BINARY_DIR}/indi_tess.xml )
 
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
@@ -32,6 +32,6 @@ add_executable(indi_tess ${inditess_SRCS})
 target_link_libraries(indi_tess ${INDI_DRIVER_LIBRARIES} ${NOVA_LIBRARIES})
 
 install(TARGETS indi_tess RUNTIME DESTINATION bin)
-install(FILES indi_tess.xml DESTINATION ${INDI_DATA_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/indi_tess.xml DESTINATION ${INDI_DATA_DIR})
 install(FILES tess_sk.xml DESTINATION ${INDI_DATA_DIR})
 
