--- a/debian/libfli/control
+++ b/debian/libfli/control
@@ -2,7 +2,7 @@ Source: libfli1
 Section: libs
 Priority: extra
 Maintainer: Jasem Mutlaq <mutlaqja@ikarustech.com>
-Build-Depends: debhelper (>= 5), cmake
+Build-Depends: debhelper (>= 5), cdbs, cmake
 Standards-Version: 3.9.1
 
 Package: libfli1
