Removing unnecessary directory inclusion

--- a/3rdparty/libapogee/CMakeLists.txt
+++ b/3rdparty/libapogee/CMakeLists.txt
@@ -25,64 +25,64 @@ include_directories( ${Boost_INCLUDE_DIRS})
 include_directories( ${CURL_INCLUDE_DIR})
 
 set(libapogee_SRCS
-   ${CMAKE_CURRENT_SOURCE_DIR}/GenOneLinuxUSB.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/linuxHelpers.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/LinuxTimer.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/LoggerSyslog.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/UdpSocketLinux.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaCcdAcqParams.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/Alta.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AspenData.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaData.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaEthernetIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaF.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaModeFsm.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AltaUsbIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/apgHelper.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ApgLogger.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ApgTimer.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ApnCamData.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ApogeeCam.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/Ascent.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AscentBasedIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AscentBasedUsbIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AscentData.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamCfgMatrix.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CameraIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CameraInfo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CameraStatusRegs.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamGen2Base.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamGen2CcdAcqParams.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamGen2ModeFsm.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamHelpers.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamRegMirror.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CamUsbIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/CcdAcqParams.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/FilterWheelIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/FindDeviceEthernet.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/FindDeviceUsb.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/Aspen.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AspenEthernetIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AspenIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/AspenUsbIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/helpers.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/HiC.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/IAltaSerialPortIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ICamIo.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ILog.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ImgFix.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ITimer.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/libCurlWrap.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/LoggerException.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ModeFsm.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/parseCfgTabDelim.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/PlatformData.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/IUsb.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/UdpSocketBase.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/ApogeeFilterWheel.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/PromFx2Io.cpp
-   ${CMAKE_CURRENT_SOURCE_DIR}/Quad.cpp
+   GenOneLinuxUSB.cpp
+   linuxHelpers.cpp
+   LinuxTimer.cpp
+   LoggerSyslog.cpp
+   UdpSocketLinux.cpp
+   AltaCcdAcqParams.cpp
+   Alta.cpp
+   AspenData.cpp
+   AltaData.cpp
+   AltaEthernetIo.cpp
+   AltaF.cpp
+   AltaIo.cpp
+   AltaModeFsm.cpp
+   AltaUsbIo.cpp
+   apgHelper.cpp
+   ApgLogger.cpp
+   ApgTimer.cpp
+   ApnCamData.cpp
+   ApogeeCam.cpp
+   Ascent.cpp
+   AscentBasedIo.cpp
+   AscentBasedUsbIo.cpp
+   AscentData.cpp
+   CamCfgMatrix.cpp
+   CameraIo.cpp
+   CameraInfo.cpp
+   CameraStatusRegs.cpp
+   CamGen2Base.cpp
+   CamGen2CcdAcqParams.cpp
+   CamGen2ModeFsm.cpp
+   CamHelpers.cpp
+   CamRegMirror.cpp
+   CamUsbIo.cpp
+   CcdAcqParams.cpp
+   FilterWheelIo.cpp
+   FindDeviceEthernet.cpp
+   FindDeviceUsb.cpp
+   Aspen.cpp
+   AspenEthernetIo.cpp
+   AspenIo.cpp
+   AspenUsbIo.cpp
+   helpers.cpp
+   HiC.cpp
+   IAltaSerialPortIo.cpp
+   ICamIo.cpp
+   ILog.cpp
+   ImgFix.cpp
+   ITimer.cpp
+   libCurlWrap.cpp
+   LoggerException.cpp
+   ModeFsm.cpp
+   parseCfgTabDelim.cpp
+   PlatformData.cpp
+   IUsb.cpp
+   UdpSocketBase.cpp
+   ApogeeFilterWheel.cpp
+   PromFx2Io.cpp
+   Quad.cpp
    )
   
 add_library(apogee SHARED ${libapogee_SRCS})
