Follow indi-asicam -> indi-asi in cmake/config/README

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -118,7 +118,7 @@ endif(FISHCAMP_FOUND)
 endif(WITH_FISHCAMP)
 
 if (WITH_ASICAM)
-add_subdirectory(indi-asicam)
+add_subdirectory(indi-asi)
 endif(WITH_ASICAM)
 
 if (WITH_DSI)
