Add INDI-MI to list

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 3rdparty/generic-ccd/*.user*
 3rdparty/indi-asi/*.user*
 3rdparty/indi-dsi/*.user*
+3rdparty/indi-mi/*.user*
 3rdparty/indi-ffmv/*.user*
 3rdparty/indi-gpsd/*.user*
 3rdparty/indi-apogee/*.user*
