--- a/debian/fliusb/rules
+++ b/debian/fliusb/rules
@@ -3,6 +3,8 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+DEB_SRCDIR=fliusb
+
 name = fliusb
 # Parse the package version from the changelog, "borrowed" from acpi_call
 version := $(shell dpkg-parsechangelog | grep '^Version:' | cut -d' ' -f2 |\
@@ -23,12 +25,12 @@ override_dh_dkms:
 override_dh_auto_install:
 	# fliusb-dkms
 	dh_installdirs -p$(name)-dkms usr/src/$(name)-$(version)
-	dh_install -p$(name)-dkms Makefile usr/src/$(name)-$(version)
-	dh_install -p$(name)-dkms fliusb* usr/src/$(name)-$(version)
+	dh_install --sourcedir $(DEB_SRCDIR) -p$(name)-dkms Makefile usr/src/$(name)-$(version)
+	dh_install --sourcedir $(DEB_SRCDIR) -p$(name)-dkms "fliusb*" usr/src/$(name)-$(version)
 	# fliusb-source (for use with module-assistant)
 	dh_installdirs -p$(name)-source usr/src/modules/$(name)/debian
-	dh_install -p$(name)-source Makefile usr/src/modules/$(name)
-	dh_install -p$(name)-source fliusb* usr/src/modules/$(name)
+	dh_install --sourcedir $(DEB_SRCDIR) -p$(name)-source Makefile usr/src/modules/$(name)
+	dh_install --sourcedir $(DEB_SRCDIR) -p$(name)-source "fliusb*" usr/src/modules/$(name)
 	install -D -m 0755 debian/rules.modules debian/$(name)-source/usr/src/modules/$(name)/debian/rules
 	for file in changelog compat control control.modules.in copyright; do \
 		install -m 644 debian/$$file debian/$(name)-source/usr/src/modules/$(name)/debian/; \
