--- a/debian/kstars/control
+++ b/debian/kstars/control
@@ -6,31 +6,22 @@ Build-Depends: cmake,
                debhelper (>= 9.0.0),
                extra-cmake-modules (>= 1.3.0~),
                kdoctools-dev,
-               kinit-dev,
-               kio-dev,
                libkf5config-dev,
-               libkf5parts-dev,
-               libkf5dbusaddons-dev,
                libkf5guiaddons-dev,
                libkf5i18n-dev,
                libkf5jobwidgets-dev,
                libkf5newstuff-dev,
                libkf5notifications-dev,
-               libkf5texteditor-dev,
-               libkf5windowsystem-dev,
                libkf5xmlgui-dev,
                libkf5plotting-dev,
-               libkf5iconthemes-dev,
                libkf5crash-dev,
                pkg-kde-tools (>= 0.15.15ubuntu1~),
                qtbase5-dev,
-               qtscript5-dev,
                qtdeclarative5-dev,
                qtmultimedia5-dev,
                libqt5svg5-dev,
-               libqt5opengl5-dev,
                libqt5sql5-sqlite,
-               libeigen3-dev, zlib1g-dev, libcfitsio3-dev (>= 3.040), libglu1-mesa-dev [!armhf], libnova-dev, pkg-config, libindi-dev (>= 1.0.0), wcslib-dev, xplanet 
+               libeigen3-dev, zlib1g-dev, libcfitsio3-dev (>= 3.040), libglu1-mesa-dev [!armhf], libnova-dev, pkg-config, libindi-dev (>= 1.2.0), indi-bin (>= 1.2.0), wcslib-dev
 Standards-Version: 3.9.3
 Homepage: http://edu.kde.org/
 Vcs-Browser: http://bazaar.launchpad.net/~kubuntu-packagers/kubuntu-packaging/kstars
@@ -43,7 +34,7 @@ Architecture: any
 Section: science
 conflicts: kstars
 replaces: kstars
-Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kded5, kinit, indi-full, python-kde4, astrometry.net
+Depends: ${shlibs:Depends}, ${misc:Depends}, kstars-bleeding-data (>= ${source:Version}), kded5, kinit, libkf5dbusaddons, libindi1, indi-bin
 Description: desktop planetarium for KDE
  KStars is a desktop planetarium for KDE, depicting an accurate graphical
  simulation of the night sky, from any location on Earth, at any date and time.
